--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <!--<script src='./ex-07-getWordCount.js'></script>-->
 
     <!-- ex-08 -->
-    <script src='./ex-08-showStats.js'></script>
+    <!--<script src='./ex-08-showStats.js'></script>-->
 
     <!-- ex-9 -->
-    <!--<script src='./ex-09-newUser.js'></script>-->
+    <script src='./ex-09-newUser.js'></script>
 
     <!-- ex-10 -->
     <!--<script src='./ex-10-merge.js'></script>-->
