--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <!--<script src='./ex-08-showStats.js'></script>-->
 
     <!-- ex-9 -->
-    <script src='./ex-09-newUser.js'></script>
+    <!--<script src='./ex-09-newUser.js'></script>-->
 
     <!-- ex-10 -->
-    <!--<script src='./ex-10-merge.js'></script>-->
+    <script src='./ex-10-merge.js'></script>
 
     <!-- ex-11 -->
     <!--<script src='./ex-11-where.js'></script>-->
