--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <!--<script src='./ex-09-newUser.js'></script>-->
 
     <!-- ex-10 -->
-    <script src='./ex-10-merge.js'></script>
+    <!--<script src='./ex-10-merge.js'></script>-->
 
     <!-- ex-11 -->
-    <!--<script src='./ex-11-where.js'></script>-->
+    <script src='./ex-11-where.js'></script>
   </body>
 </html>
